--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/packages.config
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/packages.config
@@ -17,9 +17,12 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers" version="3.6.0-4.final" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.PowerBI.Api" version="3.11.1" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.21" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Cng" version="4.7.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
