--- a/PhysiotherapyPortfolio/Physiotherapy.BLL.Test/Physiotherapy.BLL.Test.csproj
+++ b/PhysiotherapyPortfolio/Physiotherapy.BLL.Test/Physiotherapy.BLL.Test.csproj
@@ -58,7 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account\RegisterControllerTest.cs" />
+    <Compile Include="Account\RegisterBLTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,6 +66,16 @@
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\Physiotherapy.UIL\packages\xunit.analyzers.0.10.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Physiotherapy.BLL\Physiotherapy.BLL.csproj">
+      <Project>{952FC013-1843-43C4-AD32-13F23AF22BCC}</Project>
+      <Name>Physiotherapy.BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Physiotherapy.Model\Physiotherapy.Model.csproj">
+      <Project>{5BB21FB2-1BF8-4502-8978-6998D9D49671}</Project>
+      <Name>Physiotherapy.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
