--- a/PhysiotherapyPortfolio/Physiotherapy.DAL/Physiotherapy.DAL.csproj
+++ b/PhysiotherapyPortfolio/Physiotherapy.DAL/Physiotherapy.DAL.csproj
@@ -59,8 +59,13 @@
     <Compile Include="Context\Member\MemberContext.cs" />
     <Compile Include="Context\Member\RoleContext.cs" />
     <Compile Include="Context\Organization\CvContext.cs" />
+    <Compile Include="Context\Person\AddressContext.cs" />
+    <Compile Include="Context\Person\EmailContext.cs" />
+    <Compile Include="Context\Person\PhoneContext.cs" />
     <Compile Include="Implementation\Member\MemberDA.cs" />
     <Compile Include="Implementation\Member\RoleDA.cs" />
+    <Compile Include="Interface\Person\IPhoneDA.cs" />
+    <Compile Include="Implementation\Person\PhoneDA.cs" />
     <Compile Include="Interface\Member\IMemberDA.cs" />
     <Compile Include="Interface\Member\IRoleDA.cs" />
     <Compile Include="Interface\Organization\ICvDA.cs" />
@@ -70,8 +75,6 @@
     <Compile Include="Implementation\Organization\CvDA.cs" />
     <Compile Include="Implementation\Person\AddressDA.cs" />
     <Compile Include="Implementation\Person\EmailDA.cs" />
-    <Compile Include="Implementation\Person\EmaiVO.cs" />
-    <Compile Include="Implementation\Person\Task.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
