--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
@@ -31,7 +31,7 @@
     <!-- for finance-->
   </appSettings>
   <system.web>
-    <sessionState cookieless="false" mode="InProc"></sessionState>
+    <sessionState cookieless="false" mode="InProc" timeout="216000"></sessionState>
     <!--<globalization enableClientBasedCulture="true" culture="auto" uiCulture="auto"/>-->
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
