--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Physiotherapy.UIL.csproj
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Physiotherapy.UIL.csproj
@@ -169,8 +169,6 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\jquery.datetimepicker.css" />
-    <Content Include="Content\open-iconic-bootstrap.css" />
-    <Content Include="Content\open-iconic-bootstrap.min.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -1848,6 +1846,13 @@
     <Content Include="fonts\fontAwesome\webfonts\fa-brands-400.svg" />
     <Content Include="fonts\fontAwesome\webfonts\fa-regular-400.svg" />
     <Content Include="fonts\fontAwesome\webfonts\fa-solid-900.svg" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-bootstrap.css" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-bootstrap.min.css" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-foundation.css" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-foundation.min.css" />
+    <Content Include="fonts\openIconic\font\css\open-iconic.css" />
+    <Content Include="fonts\openIconic\font\css\open-iconic.min.css" />
+    <Content Include="fonts\openIconic\font\fonts\open-iconic.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\fontAwesome\less\brands.less" />
@@ -1928,9 +1933,19 @@
     <Content Include="Scripts\esm\popper-utils.min.js.map" />
     <Content Include="Scripts\esm\popper-utils.js.map" />
     <Content Include="Scripts\Formats\Phone.Input.Mask.js" />
-    <Content Include="Content\open-iconic-bootstrap.less" />
-    <Content Include="Content\open-iconic-bootstrap.scss" />
-    <Content Include="Content\open-iconic-bootstrap.styl" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-bootstrap.less" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-bootstrap.scss" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-bootstrap.styl" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-foundation.less" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-foundation.scss" />
+    <Content Include="fonts\openIconic\font\css\open-iconic-foundation.styl" />
+    <Content Include="fonts\openIconic\font\css\open-iconic.less" />
+    <Content Include="fonts\openIconic\font\css\open-iconic.scss" />
+    <Content Include="fonts\openIconic\font\css\open-iconic.styl" />
+    <Content Include="fonts\openIconic\font\fonts\open-iconic.eot" />
+    <Content Include="fonts\openIconic\font\fonts\open-iconic.otf" />
+    <Content Include="fonts\openIconic\font\fonts\open-iconic.ttf" />
+    <Content Include="fonts\openIconic\font\fonts\open-iconic.woff" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
