--- a/PhysiotherapyPortfolio/Physiotherapy.BLL/Physiotherapy.BLL.csproj
+++ b/PhysiotherapyPortfolio/Physiotherapy.BLL/Physiotherapy.BLL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Implementation\Member\MemberBL.cs" />
     <Compile Include="Implementation\Member\RoleBL.cs" />
     <Compile Include="Implementation\Organization\CvBL.cs" />
+    <Compile Include="Implementation\Organization\Studies\StudiesBL.cs" />
     <Compile Include="Implementation\Person\EmailBL.cs" />
     <Compile Include="Implementation\Person\PersonBL.cs" />
     <Compile Include="Implementation\Person\PersonRepository.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Implementation\_SeasonState\StatePrepareBL.cs" />
     <Compile Include="Interface\Member\IMemberBL.cs" />
     <Compile Include="Interface\Member\IRoleBL.cs" />
+    <Compile Include="Interface\Organization\Cv\IStudiesBL.cs" />
     <Compile Include="Interface\Organization\ICVBL.cs" />
     <Compile Include="Interface\Person\IPersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
