--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
@@ -10,7 +10,9 @@
   </configSections>
   <connectionStrings>
     <!-- ***************** local test dbs  *****************-->
-    <add name="Physiotherapy" connectionString="Server=tcp:DESKTOP-37BEIAF,1000;Database=Physiotherapy;User ID=Physiotherapy_sa;Password=physiotherapy12345!;Min Pool Size=25;Max Pool Size=150;Packet Size=3072;Connection Lifetime=60;Application Name=Physiotherapy;" providerName="System.Data.SqlClient" />
+    <add name="Physiotherapy"
+         connectionString="Server=tcp:DESKTOP-37BEIAF,1000;Database=Physiotherapy;User ID=Physiotherapy_sa;Password=physiotherapy12345!;Min Pool Size=25;Max Pool Size=150;Packet Size=3072;Connection Lifetime=60;Application Name=Physiotherapy;"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
