--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Physiotherapy.UIL.csproj
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Physiotherapy.UIL.csproj
@@ -2074,6 +2074,7 @@
     <Content Include="Views\Cv\Index.cshtml" />
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Cv\_EducationCreate.cshtml" />
+    <Content Include="Views\Cv\_EducationEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
