--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
@@ -9,9 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!-- ***************** local test dbs  *****************-->
+    <!-- ***************** local test databases  *****************-->
     <add name="Physiotherapy"
-         connectionString="Server=tcp:DESKTOP-37BEIAF,1000;Database=Physiotherapy;User ID=Physiotherapy_sa;Password=physiotherapy12345!;Min Pool Size=25;Max Pool Size=150;Packet Size=3072;Connection Lifetime=60;Application Name=Physiotherapy;"
+         connectionString="Server=DESKTOP-8RJOM2B;Database=Physiotherapy;User ID=Physiotherapy_sa;Password=physiotherapy12345!sa;Min Pool Size=25;Max Pool Size=150;Packet Size=3072;Connection Lifetime=60;Application Name=Physiotherapy;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
