--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
@@ -10,9 +10,7 @@
   </configSections>
   <connectionStrings>
     <!-- ***************** local test databases  *****************-->
-    <add name="Physiotherapy"
-         connectionString="Server=DESKTOP-8RJOM2B;Database=Physiotherapy;User ID=Physiotherapy_sa;Password=physiotherapy12345!sa;Min Pool Size=25;Max Pool Size=150;Packet Size=3072;Connection Lifetime=60;Application Name=Physiotherapy;"
-         providerName="System.Data.SqlClient" />
+    <add name="Physiotherapy" connectionString="Server=DESKTOP-8RJOM2B;Database=Physiotherapy;User ID=Physiotherapy_sa;Password=physiotherapy12345!sa;Min Pool Size=25;Max Pool Size=150;Packet Size=3072;Connection Lifetime=60;Application Name=Physiotherapy;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -69,7 +67,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.6.0" newVersion="4.0.6.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -114,6 +112,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Security.Cryptography.Cng" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.3.3.0" newVersion="4.3.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
