--- a/PhysiotherapyPortfolio/Physiotherapy.Common/Physiotherapy.Common.csproj
+++ b/PhysiotherapyPortfolio/Physiotherapy.Common/Physiotherapy.Common.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Helper\ConditionUtil.cs" />
     <Compile Include="Helper\ValidateEachItemAttribute .cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\DateTimeUtil.cs" />
     <Compile Include="Util\LocaliziationUtil.cs" />
     <Compile Include="_Resources\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
