--- a/PhysiotherapyPortfolio/Physiotherapy.Model/packages.config
+++ b/PhysiotherapyPortfolio/Physiotherapy.Model/packages.config
@@ -4,5 +4,6 @@
   <package id="EWSoftware.SHFB" version="2020.3.6" targetFramework="net472" />
   <package id="EWSoftware.SHFB.NETFramework" version="4.8.0" targetFramework="net472" />
   <package id="GitInfo" version="2.0.26" targetFramework="net472" developmentDependency="true" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
 </packages>
