--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Physiotherapy.UIL.csproj
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Physiotherapy.UIL.csproj
@@ -177,6 +177,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\Account\AdminController.cs" />
     <Compile Include="Controllers\Account\RegisterController.cs" />
     <Compile Include="Controllers\Application\Error.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -2104,6 +2105,8 @@
     <Content Include="Views\Cv\_EducationCreate.cshtml" />
     <Content Include="Views\Cv\_EducationEdit.cshtml" />
     <Content Include="Views\Error\NotAuthorized.cshtml" />
+    <Content Include="Views\Admin\Admin.cshtml" />
+    <Content Include="Views\Admin\UrlDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
