--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!-- ***************** local test databases  *****************-->
-    <add name="Physiotherapy" connectionString="Server=DESKTOP-8RJOM2B;Database=Physiotherapy;User ID=Physiotherapy_sa;Password=physiotherapy12345!sa;Min Pool Size=25;Max Pool Size=150;Packet Size=3072;Connection Lifetime=60;Application Name=Physiotherapy;" providerName="System.Data.SqlClient" />
+    <add name="Physiotherapy" connectionString="Server=DESKTOP-8RJOM2B;Database=Doctor;User ID=Doctor;Password=Doctor12345!sa;Min Pool Size=25;Max Pool Size=150;Packet Size=3072;Connection Lifetime=60;Application Name=Physiotherapy;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
